techdebt: [CDS-45384]: Remove dead code for service v2 (#40683)
* techdebt: [CDS-0]: Remove dead code for service v2

* techdebt: [CDS-0]: Code Format

* techdebt: [CDS-0]: Remove ServiceStepV2Params

* techdebt: [CDS-0]: Update test